--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/logo4/png" href="images/logo4 (2).png" sizes="20x20">
-  <title>Nikitha</title>
+  <title>Nikitha Malkapuram</title>
   <meta name="keywords" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.">
   <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.">
 
@@ -77,13 +77,13 @@
           <div class="row gutters-80">
             <div class="col-md-4">
               <div class="about__image">
-                <img src="assets/images/about-me-image.png" alt="">
+                <img src="images/2.png" height="400" width="350" alt="">
               </div>
             </div>
             <div class="col-md-8 about__content">
               <p class="about__description">Hi,My name Nikitha.I recently completed my graduation in computer science.
-                I am living in hyderabad.I’m a deep lover of designing that makes me a UI Developer and Designer.
-                I want to become a Front End Developer</p>
+                I am an enthusiastic of Web Development and Web Designing.I’m a deep lover of designing that makes me a UI Developer and Designer.
+                I am looking for an opportunity to start my career in Web Development Feild.</p>
               <div class="row row--margin-top">
                 <div class="col-md-4">
                   <p class="about__bio"><strong>NAME :</strong> Nikitha Malkapuram</p>
@@ -95,9 +95,9 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-4 col-lg-6">
+                <!-- <div class="col-md-4 col-lg-6">
                   <a class="button button--colorful button--margin" href="#">DOWNLOAD CV</a>
-                </div>
+                </div> -->
                 <!-- <div class="col-md-4">
                   <a class="button button--colorful button--margin" href="#">HIRE ME</a>
                 </div> -->
@@ -120,8 +120,8 @@
               <!-- <img src="images/1.png"> -->
               <h4 class="skill__single-part__title" style="color: #0b69dd;">HTML</h4>
                <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:90%;background-color: #0b69dd;">
-                  90%
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:95%;background-color: #0b69dd;">
+                  95%
                 </div> 
               </div>
             </div>
@@ -142,8 +142,8 @@
               <!-- <img src="images/1.png" alt=""> -->
               <h4 class="skill__single-part__title" style="color:#d45279">BOOTSTRAP</h4>
               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color: #d45279;">
-                    80%
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:95%;background-color: #d45279;">
+                    95%
                 </div>
               </div>
             </div>
@@ -153,8 +153,8 @@
               <!-- <img src="assets/images/adobe-after-effects.png" alt=""> -->
               <h4 class="skill__single-part__title" style="color:  #71af4d">JAVASCRIPT</h4>
               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:60%;background-color: #71af4d;">
-                   60%
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color: #71af4d;">
+                   80%
                 </div>
               </div>
             </div>
@@ -167,8 +167,8 @@
               <!-- <img src="images/1.png"> -->
               <h4 class="skill__single-part__title" style="color:#9456c7 ;">JQUERY</h4>
                <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color: #9456c7;">
-                  80%
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:90%;background-color: #9456c7;">
+                  90%
                 </div> 
               </div>
             </div>
@@ -200,13 +200,37 @@
               <!-- <img src="assets/images/adobe-after-effects.png" alt=""> -->
               <h4 class="skill__single-part__title" style="color: #cc8250;">CSS ANIMATION</h4>
               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:70%;background-color: #cc8250;">
-                   70%
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:85%;background-color: #cc8250;">
+                   85%
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="row gutters-60">
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#03abf8 ;">Chrome Developer Tools</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color:#03abf8;">
+                  80%
+                </div> 
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#dd0884 ;">Deploy Into Netlify</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color:#dd0884;">
+                  80%
+                </div> 
+              </div>
+            </div>
+          </div>
+        </div>  
       </div>
     </div>
   </section>
