--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
   </script>
 </head>
 <body>
-  
-<div id="content-wrapper">
-  <header class="header header--bg">
+<div id="content-wrapper" >
+   <header class="header header--bg">
     <div class="container">
       <nav class="navbar navbar-fixed-top" style="background-color:rgb(132,96,242);">
         <div class="navbar-header">
@@ -37,7 +36,7 @@
             <span class="icon-bar"></span> 
           </button>
         </div>
-        <!-- Navbar Start -->
+        <!-- Navbar Start  -->
         <div class="collapse navbar-collapse" id="myNavbar" style="overflow:hidden;border:0!important;">
           <ul class="nav navbar-nav">
             <li><a href="#home">HOME</a></li>
@@ -48,15 +47,15 @@
           </ul>
         </div>
         <!-- Navbar Ended -->
-      </nav>
-      <div class="header__content text-center" id="home">
+       </nav>
+      <div class="header__content text-center ">
         <span class="header__content__block">HELLO! I'AM NIKITHA</span>
         <h1 class="header__content__title">A Front End Developer</h1>
-        <ul class="header__content__sub-title">
-          <!-- <li>UI&#47;UX DESIGNER <span class="padding">&#45;</span></li> -->
-          <!-- <li>WEB DEVELOPER <span class="padding">&#45;</span></li> -->
-          <!--<li>PHOTOGRAPHAR</li>  -->
-        </ul>
+        <!-- <ul class="header__content__sub-title">
+          <li>UI&#47;UX DESIGNER <span class="padding">&#45;</span></li> 
+           <li>WEB DEVELOPER <span class="padding">&#45;</span></li> 
+          <li>PHOTOGRAPHAR</li>  
+         </ul>-->
         <a class="header__button" href="files/nikithamalkapuram.pdf" download>Download My Resume</a>
       </div>
       <div class="social-icon pull-right">
@@ -66,8 +65,9 @@
         </ul>
       </div>
     </div>
-  </header>
-
+  </header> 
+   
+  
   <section class="about" id="about">
     <div class="container about__container--narrow">
       <div class="page-section">
@@ -187,10 +187,10 @@
           <div class="col-md-3">
             <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
               <!-- <img src="images/1.png" alt=""> -->
-              <h4 class="skill__single-part__title" style="color: #3a7d9cf5 ;">GITHUB</h4>
+              <h4 class="skill__single-part__title" style="color: #db0c0cf5 ;">PARTICAL.JS</h4>
               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
-                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:60%;background-color: #3a7d9cf5;">
-                    60%
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:95%;background-color: #db0c0cf5;">
+                    95%
                 </div>
               </div>
             </div>
@@ -198,7 +198,7 @@
           <div class="col-md-3">
             <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
               <!-- <img src="assets/images/adobe-after-effects.png" alt=""> -->
-              <h4 class="skill__single-part__title" style="color: #cc8250;">CSS ANIMATION</h4>
+              <h4 class="skill__single-part__title" style="color: #cc8250;">GITHUB</h4>
               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
                 <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:85%;background-color: #cc8250;">
                    85%
@@ -230,11 +230,33 @@
               </div>
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#0018f3 ;">CSS ANIMATION</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color:#0018f3;">
+                  80%
+                </div> 
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#ee0595 ;">AJAX and JSON</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color:#ee0595;">
+                  80%
+                </div> 
+              </div>
+            </div>
+          </div>
         </div>  
       </div>
     </div>
   </section>
-
+  
   <section class="service" id="education">
     <div class="container">
       <div class="page-section">
@@ -299,12 +321,13 @@
     </div>
   </footer>
 </div>
+   
   <script src="assets/jquery/jquery-3.2.1.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="js/mixitup.js"></script>
 
   <script>
-      AOS.init(); 
+      // AOS.init(); 
      
 
     $('a').click(function(e)
