--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       <div class="header__content text-center my-content mt-n1">
           <span class="header__content__block">HELLO! I'AM NIKITHA</span>
           <h1 class="header__content__title">A Front End Developer</h1>
-          <a class="header__button" href="files/nikithamalkapuram.pdf" download>Download My Resume</a>
-      </div>  
-      <div class="social-icon pull-right">
+          <!-- <a class="header__button" href="files/nikithamalkapuram.pdf" download>Download My Resume</a> -->
+      </div> 
+      <div class="col-lg-2 social-icon ">
         <ul>
-          <li><a href="https://www.linkedin.com/in/nikithamalkapuram/" target="block"><i class="fa fa-linkedin" style="font-size:30px;" aria-hidden="true"></i></a></li>&nbsp;&nbsp;
+          <li><a href="https://www.linkedin.com/in/nikithamalkapuram/" target="block"><i class="fa fa-linkedin" style="font-size:30px;" aria-hidden="true"></i></a></li>
           <li><a href="https://github.com/nikitha26" target="block"><i class="fa fa-github" style="font-size:30px;" aria-hidden="true"></i></a></li>
         </ul>
       </div>
@@ -87,6 +87,7 @@
                 <div class="col-md-4">
                   <p class="about__bio"><strong>NAME :</strong> Nikitha Malkapuram</p>
                   <p class="about__bio"><strong>AGE :</strong> 20</p>
+                    <a class="header__button" href="files/nikithamalkapuram.pdf" download>Download My Resume</a>
                 </div>
                 <div class="col-md-4">
                   <p class="about__bio"><strong>JOB TITLE :</strong> UI Designer</p>
@@ -251,16 +252,112 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="row gutters-60">
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#f88e03 ;">Chart.js</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:95%;background-color:#f88e03;">
+                  95%
+                </div> 
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#08dd6b ;">Easy-Pie-Chart.js</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:90%;background-color:#08dd6b;">
+                  90%
+                </div> 
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#00f3d3 ;">Google FireStore</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:70%;background-color:#00f3d3;">
+                  70%
+                </div> 
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail text-center animate__animated animate__zoomIn animate__delay-2s">
+              <!-- <img src="images/1.png"> -->
+              <h4 class="skill__single-part__title" style="color:#8505ee ;">VS Code</h4>
+               <div class="progress" style="border-radius:6px;height: 15px;box-shadow: 2px 2px 2px rgb(86, 93, 98);">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:80%;background-color:#8505ee;">
+                  80%
+                </div> 
+              </div>
+            </div>
+          </div>
         </div>  
       </div>
     </div>
   </section>
-  
+  <!-- Skills Ended -->
+
+  <!-- Projects Section Start -->
   <section class="service" id="education">
     <div class="container">
       <div class="page-section">
-        <h2 class="page-section__title">MY EDUCATION</h2>
+        <h2 class="page-section__title">PROJECTS</h2>
         <img class="page-section__title-style" src="assets/images/title-style.png" alt="">
+        <p class="page-section__paragraph"> </p>
+        <div class="row gutters-70">
+          <div class="col-md-4">
+            <div class="thumbnail text-center">
+              <img src="images/graduate.png" alt="" height="200" width="200" style="margin-top: -10px;">
+              <h4 class="service__single-section__title" >WEATHER APPLICATION</h4>
+              <ul class="text-justify">
+                <li>1.This is built by open weather map api.</li> 
+                <li>2.This application built in React.js. </li>
+              </ul><hr>
+              <button class="btn btn-danger">
+                <a href="https://github.com/nikitha26" style="color: white;">GITHUB</a>
+                </button>
+              <button class="btn btn-primary">LIVE DEMO</button>
+            </div> 
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail text-center">
+              <img src="images/school.png" alt="" height="200" width="200" style="margin-top: -10px;">
+              <h4 class="service__single-section__title">HIGHER SECONDARY</h4>
+              <p class="about__edu"><strong>GROUP :</strong> (MPC) Maths Physics Chemisty</p>
+              <p class="about__edu"><strong>YEAR :</strong> 2015-2017</p> 
+              <p class="about__edu"><strong>PERCENTAGE :</strong> 78%</p> 
+              <p class="about__edu"><strong>COLLEGE NAME :</strong>Sri Chaitanya Bharathi Junior College,(Chandanagar)</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail text-center">
+              <img src="images/clg.png" alt="" height="200" width="200" style="margin-top: -10px;">
+              <h4 class="service__single-section__title">HIGH SCHOOL</h4>
+              <p class="about__edu"><strong>SYLLABUS :</strong> CBSE</p> 
+              <p class="about__edu"><strong>YEAR :</strong> 2014-2015</p> 
+              <p class="about__edu"><strong>PERCENTAGE :</strong> 77%</p> 
+              <p class="about__edu"><strong>SCHOOL NAME :</strong>ZPHS High School, (Kondapur)</p>&nbsp;&nbsp;
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--Projects Ended  -->
+
+  <!-- Education Start -->
+  <section class="service" id="skill">
+    <div class="container">
+      <div class="page-section">
+        <h2 class="page-section__title" style="color: white;">MY EDUCATION</h2>
+        <img class="page-section__title-style" src="assets/images/title-style-white.png" alt="">
         <p class="page-section__paragraph"> </p>
         <div class="row gutters-70">
           <div class="col-md-4">
@@ -290,7 +387,7 @@
               <p class="about__edu"><strong>SYLLABUS :</strong> CBSE</p> 
               <p class="about__edu"><strong>YEAR :</strong> 2014-2015</p> 
               <p class="about__edu"><strong>PERCENTAGE :</strong> 77%</p> 
-              <p class="about__edu"><strong>SCHOOL NAME :</strong>ZPHS High School, (Kondapur)</p>
+              <p class="about__edu"><strong>SCHOOL NAME :</strong>ZPHS High School, (Kondapur)</p>&nbsp;&nbsp;
             </div>
           </div>
         </div>
@@ -300,7 +397,8 @@
 
   <footer class="footer footer--bg" id="contact">
     <div class="container text-center">
-     <h3 class="text-center" style="color: white;">Get In Touch</h3>
+     <h2 class="text-center" style="color: black;">Get In Touch</h2>
+     <img class="page-section__title-style" src="assets/images/title-style.png" alt="">
       <ul class="footer__contact-information">
         <!-- <li><a href="tel:5555555555"><i class="material-icons">phone</i>9999999999 </a></li> -->
         <li><a href="mailto:sshariar458@gmail.com"><i class="material-icons">email</i> mnikitha365@gmail.com</a></li>
